user-menu: Fix spacing in combobox item
At some time an additional container was added which broke the
existing CSS rule.

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -418,7 +418,7 @@ StTooltip StLabel {
 }
 
 .status-chooser-status-item,
-.status-chooser-combo > .popup-combobox-item {
+.status-chooser-combo .popup-combobox-item {
     spacing: .4em;
 }
 
